# GLIDER

./: .gitignore  README.MD
BATTERY_BOARD/: README.MD
BATTERY_BOARD/P&R/: PR_Battery_Board_A.kicad_pcb  PR_Battery_Board_A.kicad_pro  PR_Battery_Board_A.kicad_sch  PR_Battery_Board_B.kicad_pcb  PR_Battery_Board_B.kicad_pro  PR_Battery_Board_B.kicad_sch
PCB/: README.MD
PCB/P&R/: P&R.kicad_pcb  P&R.kicad_pro  (+1 more)
ROS2_ANALYSIS/: README.md
ROS2_SYSTEM/: .gitignore  README.md
ROS2_SYSTEM/src/glider_ros/: package.xml  setup.py
ROS2_SYSTEM/src/glider_ros/config/: glider_params.yaml
ROS2_SYSTEM/src/glider_ros/glider_ros/adapter/: dead_reckoning_node.py  imu_adapter_node.py  pose_viz_node.py  sonar_adapter_node.py  telemetry_adapter_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/bridge/: can_bridge_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/controller/: controller_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/driver/: communication_iridium_node.py  gnss_maxm10s_i2c_node.py  imu_minimu_node.py  pressure_keller_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/manager/: state_manager_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/mission/: mission_node.py
ROS2_SYSTEM/src/glider_ros/glider_ros/safety/: safety_node.py
ROS2_SYSTEM/src/glider_ros/launch/: all_nodes_launch.py  can_bridge_launch.py  state_manager_launch.py
ROS2_SYSTEM/src/glider_ros/test/: snapshot_controller.py  test_controller_node.py  test_imu_adapter_node.py  test_mission_node.py  test_safety_node.py  test_sonar_adapter_node.py  test_telemetry_adapter_node.py
ROS2_TESTING/: README.md
(+119 files in other folders)
