<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glider_ros</name>
  <version>0.0.0</version>
  <description>ROS2 nodes for the underwater glider (drivers, control, safety, manager)</description>

  <maintainer email="jamesjiang0821@gmail.com">James Jiang</maintainer>
  <maintainer email="hussainniassuh786@gmail.com">Hussain Khan</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>glider_msgs</depend>
  <depend>action_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <!-- Testing -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>